--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,7 +24,11 @@
     <fragment
         android:id="@+id/navigation_search"
         android:name="com.isanz.inmomarket.ui.search.SearchFragment"
-        android:label="SearchFragment" />
+        android:label="SearchFragment" >
+        <action
+            android:id="@+id/action_navigation_search_to_miniPropertyFragment"
+            app:destination="@id/miniPropertyFragment" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_messages"
@@ -65,6 +69,17 @@
             android:id="@+id/action_navigation_chat_to_navigation_messages"
             app:destination="@id/navigation_messages" />
     </fragment>
+    <dialog
+        android:id="@+id/miniPropertyFragment"
+        android:name="com.isanz.inmomarket.MiniPropertyFragment"
+        android:label="MiniPropertyFragment" >
+        <argument
+            android:name="propertyId"
+            app:argType="string" />
+        <action
+            android:id="@+id/action_miniPropertyFragment_to_navigation_property"
+            app:destination="@id/navigation_property" />
+    </dialog>
 
 
 </navigation>
