--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,6 +5,8 @@
     <color name="md_theme_light_primary">#3D5BA9</color>
     <color name="md_theme_light_background_transparent">#B3FFFFFF</color>
     <color name="semi_transparent_black">#80000000</color>
+    <color name="less_transparent_black">#B3000000</color> <!-- 70% opaque -->
+    <color name="opaque_black">#FF000000</color> <!-- Completely opaque -->
     <color name="md_theme_light_onPrimary">#FFFFFF</color>
     <color name="md_theme_light_primaryContainer">#DBE1FF</color>
     <color name="md_theme_light_onPrimaryContainer">#00184A</color>
